fixed welcome box height on mobile

--- a/_sass/welcome-box.sass
+++ b/_sass/welcome-box.sass
@@ -18,7 +18,7 @@
 	font-size: 18px
 
 .welcome-box-seen-before
-	max-height: 500px
+	max-height: 1000px
 	opacity: 1
 	transform: translateX(0)
 	background: $brand
@@ -43,13 +43,13 @@
 		max-height: 0
 	100%
 		transform: translateX(0)
-		max-height: 500px
+		max-height: 1000px
 
 @keyframes pull-up
 	0%
 		// opacity: 0
 		transform: translateX(0)
-		max-height: 500px
+		max-height: 1000px
 	100%
 		// opacity: 1
 		transform: translateY(-1000px)
